# scrapy-redis

./: .bandit.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README  README.rst  TODO.rst  VERSION  coverage.xml  dev-requirements.in  dev-requirements.txt  docker-compose.yaml  docker-compose.yml  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-install.txt  requirements-setup.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: CI.yml  Checks.yml  builds.yml  checks.yml  ci.yml  docs.yml  macos.yml  main.yml  tests.yml  ubuntu.yml
docs/: Makefile  coding-standards.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  scrapy_redis.rst  security-guide.rst
example-project/: Dockerfile  README.rst  docker-compose.yml  process_items.py  requirements.txt  scrapy.cfg
requirements/: requirements-dev.txt  requirements-packaging.txt  requirements-tests.txt
scrapy_redis/: connection.py  dupefilter.py  pipelines.py  queue.py  scheduler.py  spiders.py  tests.py
src/scrapy_redis/: queue.py  (+10 more)
tests/: test_connection.py  test_dupefilter.py  test_package_import.py  test_picklecompat.py  test_queue.py  test_scrapy_redis.py  test_spiders.py  test_utils.py
(+6 files in other folders)
