[metadata]
name = scrapy-redis
version = attr: scrapy_redis.__version__
author = Rolando Espinoza
author_email = rolando@rmax.io
url = https://github.com/rolando/scrapy-redis
keywords = scrapy-redis
description = Redis-based components for Scrapy.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires > = 3.7
include_package_data = true
packages = find:
package_dir =
    = src
install_requires =
    Scrapy >= 2.0
    redis >= 3.0

[options.packages.find]
where = src
exclude =
    tests*
    docs

[wheel]
universal = 1

[flake8]
exclude = docs, tests
max-line-length = 120
